--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>KnightOne Bootstrap Template - Index</title>
+  <title>laet4x</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -129,7 +129,6 @@
               <li><i class="ri-check-double-line"></i> WIRED - Web Applications Attacks and Defense (2018)</li>
               <li><i class="ri-check-double-line"></i> CHED Region VI - Cyber Security (2018)</li>
               <li><i class="ri-check-double-line"></i> TCON 3 -  Wireless Hacking, Android Hacking (2016)</li>
-
             </ul>
            
 
@@ -146,23 +145,27 @@
           <h2>Contact</h2>
           <p></p>
         </div>
-      </div>
-      <div class="container">
 
-        <div class="row mt-5">
           <div class="col-lg-4">
             <div class="info">
+              <div class="email">
+                <i class="bx bxl-twitter"></i>
+                <h4>Twitter:</h4>
+                <p>@laet4x</p>
+              </div>
+              <div class="email">
+                <i class="bx bxl-facebook"></i>
+                <h4>FB Page:</h4>
+                <p>laet4x</p>
+              </div>
               <div class="email">
                 <i class="ri-mail-line"></i>
                 <h4>Email:</h4>
                 <p>laet4x@pehcon.org</p>
               </div>
             </div>
-          </div>
 
-
-        </div>
-
+      </div>
       </div>
     </section><!-- End Contact Section -->
 
@@ -172,12 +175,6 @@
   <footer id="footer">
     <div class="container">
       <h3>laet4x</h3>
-      <p>Social Media</p>
-      <div class="social-links">
-        <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-        <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-        <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
-      </div>
       <div class="copyright">
         &copy; Copyright <strong><span>KnightOne</span></strong>. All Rights Reserved
       </div>
