--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         <div class="row content">
           <div class="col-lg-6">
             <p>
-              Handling several certifications:
+              Certifications:
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> EC-Council Information Security Manager</li>
@@ -97,13 +97,13 @@
             </ul>
             <p></p>
             <p>
-              Actively joining CTF in Hacking Conference
+              Hacking Conference and CTF:
             </p>
             <ul><li><i class="ri-check-double-line"></i> ROOTCON 14 - Recovery Mode - CTF : 2nd Place</li>
               <li><i class="ri-check-double-line"></i> ROOTCON 15 - CTF : 9th Place </li>
               <li><i class="ri-check-double-line"></i> ROOTCON 15 - Hacker Jeopardy: 1st Place </li>
             </ul>
-            <p>Media and TV Interviews</p>
+            <p>Media and TV Interviews:</p>
             <ul>
               <li><i class="ri-check-double-line"></i> Bagong Bayani TV Season 4 Episode 1 (March 21, 2019)</li>
               <li><i class="ri-check-double-line"></i> Balitang Global (February 13, 2019)</li>
@@ -111,7 +111,7 @@
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
-              Become Speaker in Several IT Events in the Country
+              Talks:
             </p>
             <ul>
               <li><i class="ri-check-double-line"></i> Tuguegaro Cyber Summit - Cyber Attack and Defense in 20th Century (2020)</li>
