--- a/index.html
+++ b/index.html
@@ -145,27 +145,47 @@
           <h2>Contact</h2>
           <p></p>
         </div>
+      </div>
 
-          <div class="col-lg-4">
+      <div class="container">
+
+        <div class="row mt-5">
+
+          <div class="col-lg-4 mt-5 mt-lg-0">
             <div class="info">
-              <div class="email">
+              <div class="address">
                 <i class="bx bxl-twitter"></i>
                 <h4>Twitter:</h4>
                 <p>@laet4x</p>
               </div>
-              <div class="email">
+            </div>
+
+          </div>
+
+          <div class="col-lg-4 mt-5 mt-lg-0">
+            <div class="info">
+              <div class="address">
                 <i class="bx bxl-facebook"></i>
-                <h4>FB Page:</h4>
+                <h4>Facebook Page:</h4>
                 <p>laet4x</p>
               </div>
-              <div class="email">
+            </div>
+          </div>
+
+          <div class="col-lg-4 mt-5 mt-lg-0">
+
+            <div class="info">
+              <div class="address">
                 <i class="ri-mail-line"></i>
                 <h4>Email:</h4>
                 <p>laet4x@pehcon.org</p>
               </div>
             </div>
+          </div>
 
-      </div>
+
+        </div>
+
       </div>
     </section><!-- End Contact Section -->
 
