--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
               Talks:
             </p>
             <ul>
+              <li><i class="ri-check-double-line"></i> PNP Region IV - Cyber Attack and Defense in the Modern Times (2021)</li>
               <li><i class="ri-check-double-line"></i> Tuguegaro Cyber Summit - Cyber Attack and Defense in 20th Century (2020)</li>
               <li><i class="ri-check-double-line"></i> PITSF 2nd Meetup - Attacking Active Directory</li>
               <li><i class="ri-check-double-line"></i> TCON 5 - Attacking Active Directory, Capture the Flag Workshop (2019)</li>
