--- a/index.html
+++ b/index.html
@@ -129,6 +129,8 @@
               <li><i class="ri-check-double-line"></i> DroinConPH - Reverse Engineering Android Applications (2018)</li>
               <li><i class="ri-check-double-line"></i> WIRED - Web Applications Attacks and Defense (2018)</li>
               <li><i class="ri-check-double-line"></i> CHED Region VI - Cyber Security (2018)</li>
+              <li><i class="ri-check-double-line"></i> Philippine Army 2018 Cyber Summit - Ransomware (2018)</li>
+              <li><i class="ri-check-double-line"></i> 8BYCIT - Web Application Security (2017)</li>
               <li><i class="ri-check-double-line"></i> TCON 3 -  Wireless Hacking, Android Hacking (2016)</li>
             </ul>
            
