Add School Talks

--- a/index.html
+++ b/index.html
@@ -130,7 +130,10 @@
               <li><i class="ri-check-double-line"></i> WIRED - Web Applications Attacks and Defense (2018)</li>
               <li><i class="ri-check-double-line"></i> CHED Region VI - Cyber Security (2018)</li>
               <li><i class="ri-check-double-line"></i> Philippine Army 2018 Cyber Summit - Ransomware (2018)</li>
+              <li><i class="ri-check-double-line"></i> ICpEp.SE - NCR Symposium 2018 - Web App Security (2018)</li>
+              <li><i class="ri-check-double-line"></i> Coding Girls Manila First Meetup - Social Engineering | Art of Human Hacking (2018)</li>
               <li><i class="ri-check-double-line"></i> 8BYCIT - Web Application Security (2017)</li>
+              <li><i class="ri-check-double-line"></i> WVSU Janiuay Campus - Web Application Security (2017)</li>
               <li><i class="ri-check-double-line"></i> TCON 3 -  Wireless Hacking, Android Hacking (2016)</li>
             </ul>
            
