--- a/index.html
+++ b/index.html
@@ -135,6 +135,7 @@
               <li><i class="ri-check-double-line"></i> 8BYCIT - Web Application Security (2017)</li>
               <li><i class="ri-check-double-line"></i> WVSU Janiuay Campus - Web Application Security (2017)</li>
               <li><i class="ri-check-double-line"></i> TCON 3 -  Wireless Hacking, Android Hacking (2016)</li>
+              <li><i class="ri-check-double-line"></i> Filamer Christian University -  Web App Security | OWASP Top 10 2013 (2015)</li>
             </ul>
            
 
