--- a/index.html
+++ b/index.html
@@ -133,6 +133,7 @@
               <li><i class="ri-check-double-line"></i> ICpEp.SE - NCR Symposium 2018 - Web App Security (2018)</li>
               <li><i class="ri-check-double-line"></i> Coding Girls Manila First Meetup - Social Engineering | Art of Human Hacking (2018)</li>
               <li><i class="ri-check-double-line"></i> 8BYCIT - Web Application Security (2017)</li>
+              <li><i class="ri-check-double-line"></i> Software Freedom Day - Web Application Security (2017)</li>
               <li><i class="ri-check-double-line"></i> WVSU Janiuay Campus - Web Application Security (2017)</li>
               <li><i class="ri-check-double-line"></i> TCON 3 -  Wireless Hacking, Android Hacking (2016)</li>
               <li><i class="ri-check-double-line"></i> Filamer Christian University -  Web App Security | OWASP Top 10 2013 (2015)</li>
