--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 
         <div class="section-title">
           <h2>About Me</h2>
-          <p>Im a founder of several IT organization such as Kalasag CERT and Project Granted Access Society. Working as Lead Information Security Specialist in an IT Company based on US.</p>
+          <p>A founder of several IT organization such as Kalasag CERT and Project Granted Access Society. Working as Lead Information Security Specialist in an IT Company based on US.</p>
         </div>
 
         <div class="row content">
