--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About Me</h2>
+          <h2>About</h2>
           <p>A founder of several IT organization such as Kalasag CERT and Project Granted Access Society. Working as Lead Information Security Specialist in an IT Company based on US.</p>
         </div>
 
