Add link to social media

--- a/index.html
+++ b/index.html
@@ -158,28 +158,38 @@
 
         <div class="row mt-5">
 
-          <div class="col-lg-4 mt-5 mt-lg-0">
+          <div class="col-lg-3 mt-5 mt-lg-0">
             <div class="info">
               <div class="address">
                 <i class="bx bxl-twitter"></i>
                 <h4>Twitter:</h4>
-                <p>@laet4x</p>
+                <a href="https://twitter.com/laet4x>"><p style="color:blue">@laet4x</p></a>
               </div>
             </div>
 
           </div>
 
-          <div class="col-lg-4 mt-5 mt-lg-0">
+          <div class="col-lg-3 mt-5 mt-lg-0">
             <div class="info">
               <div class="address">
                 <i class="bx bxl-facebook"></i>
                 <h4>Facebook Page:</h4>
-                <p>laet4x</p>
+                <a href="https://www.facebook.com/laet4x"><p style="color:blue">laet4x</p></a>
               </div>
             </div>
           </div>
 
-          <div class="col-lg-4 mt-5 mt-lg-0">
+          <div class="col-lg-3 mt-5 mt-lg-0">
+            <div class="info">
+              <div class="address">
+                <i class="bx bxl-discord"></i>
+                <h4>Discord:</h4>
+                <a href="https://discord.gg/DKzPu8E8CS"><p style="color:blue">laet4x's server</p></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-lg-3 mt-5 mt-lg-0">
 
             <div class="info">
               <div class="address">
