--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
               <div class="address">
                 <i class="ri-mail-line"></i>
                 <h4>Email:</h4>
-                <p>laet4x@pehcon.org</p>
+                <a href="mailto:laet4x@pehcon.org"><p style="color:blue">laet4x@pehcon.org</p></a>
               </div>
             </div>
           </div>
