--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
       <div class="row justify-content-center">
         <div class="col-xl-8">
           <h1>laet4x</h1>
-          <h2>Cyber Security Professional</h2>
+          <h2>Are you a one or a zero?</h2>
         </div>
       </div>
     </div>
