--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
               <div class="address">
                 <i class="bx bxl-twitter"></i>
                 <h4>Twitter:</h4>
-                <a href="https://twitter.com/laet4x>"><p style="color:blue">@laet4x</p></a>
+                <a href="https://twitter.com/laet4x"><p style="color:blue">@laet4x</p></a>
               </div>
             </div>
 
