--- a/index.html
+++ b/index.html
@@ -101,8 +101,8 @@
               <li><i class="ri-check-double-line"></i> Bagong Bayani TV Season 4 Episode 1 (March 21, 2019)</li>
               <li><i class="ri-check-double-line"></i> Balitang Global (February 13, 2019)</li>
             </ul>
-            <p>HackTheBox:</p>
-            <script src="https://www.hackthebox.eu/badge/63485"></script>
+            <!-- <p>HackTheBox:</p>
+            <script src="https://www.hackthebox.eu/badge/63485"></script> -->
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0">
             <p>
