--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
         <div class="section-title">
           <h2>About</h2>
-          <p>A founder of several IT organization such as Kalasag CERT and Project Granted Access Society. Working as Lead Information Security Specialist in an IT Company based on US.</p>
+          <p>laet4x is a Cyber Security Professional working as Lead Information Security Specialist for an IT company based in US. His passion in Cyber Security extends in different organizations he co-founded like Project-AG, PEHCON and KALASAG where he do talks, and seminars for free. </p>
         </div>
 
         <div class="row content">
