--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@
               <li><i class="ri-check-double-line"></i> EC-Council Information Security Manager</li>
               <li><i class="ri-check-double-line"></i> Certified Ethical Hacker | Master</li>
               <li><i class="ri-check-double-line"></i> EC-Council Certified Incident Handler</li>
+              <li><i class="ri-check-double-line"></i> Certified Blockchain Developer</li>
             </ul>
             <p></p>
             <p>
