--- a/index.html
+++ b/index.html
@@ -102,6 +102,8 @@
               <li><i class="ri-check-double-line"></i> Bagong Bayani TV Season 4 Episode 1 (March 21, 2019)</li>
               <li><i class="ri-check-double-line"></i> Balitang Global (February 13, 2019)</li>
             </ul>
+            <p>Discord:</p>
+            <iframe src="https://discord.com/widget?id=899548170885935114&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
             <!-- <p>HackTheBox:</p>
             <script src="https://www.hackthebox.eu/badge/63485"></script> -->
           </div>
