--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
 </head>
 
 <body>
-
+  <div id="fb-root"></div>
+<script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v12.0" nonce="kwdgRchm"></script>
   <!-- ======= Header ======= -->
   <header id="header" class="fixed-top ">
     <div class="container-fluid">
@@ -103,7 +104,7 @@
               <li><i class="ri-check-double-line"></i> Balitang Global (February 13, 2019)</li>
             </ul>
             <p>Discord:</p>
-            <iframe src="https://discord.com/widget?id=899548170885935114&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
+            
             <!-- <p>HackTheBox:</p>
             <script src="https://www.hackthebox.eu/badge/63485"></script> -->
           </div>
@@ -161,7 +162,8 @@
               <div class="address">
                 <i class="bx bxl-twitter"></i>
                 <h4>Twitter:</h4>
-                <a href="https://twitter.com/laet4x"><p style="color:blue">@laet4x</p></a>
+                <!-- <a href="https://twitter.com/laet4x"><p style="color:blue">@laet4x</p></a> -->
+                <a class="twitter-timeline" data-width="500" data-height="250" data-theme="light" href="https://twitter.com/laet4x?ref_src=twsrc%5Etfw">Tweets by laet4x</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
               </div>
             </div>
 
@@ -172,7 +174,8 @@
               <div class="address">
                 <i class="bx bxl-facebook"></i>
                 <h4>Facebook Page:</h4>
-                <a href="https://www.facebook.com/laet4x"><p style="color:blue">laet4x</p></a>
+                <!-- <a href="https://www.facebook.com/laet4x"><p style="color:blue">laet4x</p></a> -->
+                <div class="fb-page" data-href="https://www.facebook.com/laet4x" data-tabs="timeline" data-width="350" data-height="350" data-small-header="false" data-adapt-container-width="true" data-hide-cover="false" data-show-facepile="true"><blockquote cite="https://www.facebook.com/laet4x" class="fb-xfbml-parse-ignore"><a href="https://www.facebook.com/laet4x">laet4x</a></blockquote></div>
               </div>
             </div>
           </div>
@@ -182,7 +185,8 @@
               <div class="address">
                 <i class="bx bxl-discord"></i>
                 <h4>Discord:</h4>
-                <a href="https://discord.gg/DKzPu8E8CS"><p style="color:blue">laet4x's server</p></a>
+                <!-- <a href="https://discord.gg/DKzPu8E8CS"><p style="color:blue">laet4x's server</p></a> -->
+                <iframe src="https://discord.com/widget?id=899548170885935114&theme=dark" width="300" height="250" allowtransparency="true" frameborder="0" sandbox="allow-popups allow-popups-to-escape-sandbox allow-same-origin allow-scripts"></iframe>
               </div>
             </div>
           </div>
