--- a/index.html
+++ b/index.html
@@ -86,8 +86,11 @@
                 <li><i class="bi bi-chevron-right"></i> <strong>Blog:</strong> <span>laet4x.medium.com</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Philippines</span></li>
               </ul>
+              <div class="section-title">
+                <h2>Hacking Conference</h2>
+              </div>
               <ul>
-                <li><h3>CTF and Hacking Conference:</h3> <span></span></li>
+         
                 <li><i class="bi bi-chevron-right"></i> <strong>ROOTCON 14 Recover Mode CTF:</strong> <span>2nd Place</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>ROOTCON 15 CTF:</strong> <span>9th Place</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>ROOTCON 15 Hacker Jeopardy:</strong> <span>1st Place/Winner</span></li>
@@ -99,8 +102,10 @@
                 <li><i class="bi bi-facebook"></i> <strong>Facebook</strong> <span><a href="https://fb.me/laet4x">fb.me/laet4x</a></span></li>
                 <li><i class="bi bi-discord"></i> <strong>Discord</strong> <span><a href="https://discord.gg/DKzPu8E8CS">https://discord.gg/DKzPu8E8CS</a></span></li>
               </ul>
+              <div class="section-title">
+                <h2>Media and TV Interviews</h2>
+              </div>
               <ul>
-                <li><h3>Media and TV Interviews:</h3> <span></span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong></strong> <span>Bagong Bayani TV Season 4 Episode 1 (March 21, 2019)</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong></strong> <span>Balitang Global (February 13, 2019)</span></li>
               </ul>
