--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
               </div>
               <ul>
          
-                <li><i class="bi bi-chevron-right"></i> <strong>ROOTCON 14 Recover Mode CTF:</strong> <span>2nd Place</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>ROOTCON 14 Recovery Mode CTF:</strong> <span>2nd Place</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>ROOTCON 15 CTF:</strong> <span>9th Place</span></li>
                 <li><i class="bi bi-chevron-right"></i> <strong>ROOTCON 15 Hacker Jeopardy:</strong> <span>1st Place/Winner</span></li>
               </ul>
