--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h1><a href="index.html">laet4x</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>I'm a <span>Cyber Security Professional</span> from Philippines</h2>
+      <h2>A <span>Cyber Security Professional</span> from Philippines</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
@@ -67,7 +67,7 @@
 
       <div class="section-title">
         <h2>About</h2>
-        <p>Learn more about me</p>
+        <p>Meet laet4x</p>
       </div>
 
       <div class="row">
@@ -194,49 +194,49 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-database-2-line" style="color: #47aeff;"></i>
+            <i class="ri-customer-service-line" style="color: #47aeff;"></i>
             <h3>Incident Response</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-gradienter-line" style="color: #ffa76e;"></i>
+            <i class="ri-fingerprint-line" style="color: #ffa76e;"></i>
             <h3>Cyber Threat Intelligence</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-file-list-3-line" style="color: #11dbcf;"></i>
+            <i class="ri-gradienter-line" style="color: #11dbcf;"></i>
             <h3>Bug Bounty</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-price-tag-2-line" style="color: #4233ff;"></i>
+            <i class="ri-folder-user-fill" style="color: #4233ff;"></i>
             <h3>Red Teaming</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-anchor-line" style="color: #b2904f;"></i>
+            <i class="ri-window-2-fill" style="color: #b2904f;"></i>
             <h3>Web Development</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-disc-line" style="color: #b20969;"></i>
+            <i class="ri-smartphone-line" style="color: #b20969;"></i>
             <h3>Mobile App Development</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-base-station-line" style="color: #ff5828;"></i>
+            <i class="ri-file-music-fill" style="color: #ff5828;"></i>
             <h3>Music</h3>
           </div>
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-fingerprint-line" style="color: #29cc61;"></i>
+            <i class="ri-file-list-3-line" style="color: #29cc61;"></i>
             <h3>Reading Books</h3>
           </div>
         </div>
@@ -276,7 +276,7 @@
               <li>PITSF 2nd Meetup - Attacking Active Directory</li>
               <li> TCON 5 - Attacking Active Directory, Capture the Flag Workshop</li>
               <li> Tuguegaro Cyber Summit - Blockchain (2019)</li>
-              <li> PNP DICTM 1oth Founding Anniversary - Cyber Attack Vectors</li>
+              <li> PNP DICTM 10th Founding Anniversary - Cyber Attack Vectors</li>
               <li> Programmer Developers Meetup 9 - Cyber Security Attack and Defense</li>
               <li> FEU Tech ACM - Blockchain 101</li>
               <li> PUP - Hybrid Mobile Application Development</li>
