--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
           <div class="row">
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span>laet4x@pehcon.org</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>Blog:</strong> <span>laet4x.medium.com</span></li>
-                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Philippines</span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Email:</strong> <span><a href="mailto:laet4x@pehcon.org">laet4x@pehcon.org</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>Blog:</strong> <span><a href="https://laet4x.medium.com" target="_">laet4x.medium.com</a></span></li>
+                <li><i class="bi bi-chevron-right"></i> <strong>City:</strong> <span>Manila, Philippines</span></li>
               </ul>
               <div class="section-title">
                 <h2>Hacking Conference</h2>
@@ -98,9 +98,9 @@
             </div>
             <div class="col-lg-6">
               <ul>
-                <li><i class="bi bi-twitter"></i> <strong>Twitter:</strong> <span><a href="https://twitter.com/laet4x">@laet4x</a></span></li>
-                <li><i class="bi bi-facebook"></i> <strong>Facebook</strong> <span><a href="https://fb.me/laet4x">fb.me/laet4x</a></span></li>
-                <li><i class="bi bi-discord"></i> <strong>Discord</strong> <span><a href="https://discord.gg/DKzPu8E8CS">https://discord.gg/DKzPu8E8CS</a></span></li>
+                <li><i class="bi bi-twitter"></i> <strong>Twitter:</strong> <span><a href="https://twitter.com/laet4x" target="_">@laet4x</a></span></li>
+                <li><i class="bi bi-facebook"></i> <strong>Facebook</strong> <span><a href="https://fb.me/laet4x" target="_">fb.me/laet4x</a></span></li>
+                <li><i class="bi bi-discord"></i> <strong>Discord</strong> <span><a href="https://discord.gg/DKzPu8E8CS" target="_">https://discord.gg/DKzPu8E8CS</a></span></li>
               </ul>
               <div class="section-title">
                 <h2>Media and TV Interviews</h2>
