--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-folder-user-fill" style="color: #4233ff;"></i>
+            <i class="ri-folder-user-fill" style="color: #b20969;"></i>
             <h3>Red Teaming</h3>
           </div>
         </div>
@@ -224,7 +224,7 @@
         </div>
         <div class="col-lg-3 col-md-4 mt-4">
           <div class="icon-box">
-            <i class="ri-smartphone-line" style="color: #b20969;"></i>
+            <i class="ri-smartphone-line" style="color: #4233ff;"></i>
             <h3>Mobile App Development</h3>
           </div>
         </div>
