--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
-            <h5><a href="">Certified Ethical Hacker</a></h5>
+            <h5><a href="">Certified Ethical Hacker Master</a></h5>
             <p></p>
           </div>
         </div>
