add ctf writeup

--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#talks">Talks</a></li>
+          <li><a class="nav-link" href="/blog/">CTF Writeups</a></li>
           <li><a class="nav-link" href="http://laet4x.medium.com" target="_">Blog</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
