--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <li><i class="bi bi-discord"></i> <strong>Discord</strong> <span><a href="https://discord.gg/DKzPu8E8CS" target="_">https://discord.gg/DKzPu8E8CS</a></span></li>
               </ul>
               <div class="section-title">
-                <h2>Media and TV Interviews</h2>
+                <h2>Media Interviews</h2>
               </div>
               <ul>
                 <li><i class="bi bi-chevron-right"></i> <strong></strong> <span>Bagong Bayani TV Season 4 Episode 1 (March 21, 2019)</span></li>
