--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <a href="https://twitter.com/laet4x" class="twitter"><i class="bi bi-twitter"></i></a>
         <a href="https://fb.me/laet4x" class="facebook"><i class="bi bi-facebook"></i></a>
         <a href="https://discord.gg/DKzPu8E8CS" class="discord"><i class="bi bi-discord"></i></a>
+        <a href="https://github.com/laet4x" class="github"><i class="bi bi-github"></i></a>
       </div>
 
     </div>
