--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
   </div>
 
   </section><!-- End About Section -->
-
+  <input hidden value="synt{i13jF0heprPbqr}">
   <!-- ======= Resume Section ======= -->
   <section id="talks" class="resume">
     <div class="container">
