--- a/index.html
+++ b/index.html
@@ -247,7 +247,7 @@
   </div>
 
   </section><!-- End About Section -->
-  <input hidden value="synt{i13jF0heprPbqr}">
+
   <!-- ======= Resume Section ======= -->
   <section id="talks" class="resume">
     <div class="container">
@@ -263,6 +263,7 @@
           <div class="resume-item">
             <h5>2021</h5>
             <ul>
+              <li>ENcrypt 2.0 : Cyber Security Webinar - Cyber Attack and Defense</li>
               <li>PNP Region IV - Cyber Attack and Defense in the Modern Times</li>
           </ul>
           </div>
