--- a/index.html
+++ b/index.html
@@ -260,6 +260,14 @@
       <div class="row">
         <div class="col-lg-6">
           <h3 class="resume-title"></h3>
+           <div class="resume-item">
+            <h5>2022</h5>
+            <ul>
+              <li>Harmony Philippines Ambassador DAO February Meeetup - Harmony and Its Ecosystem</li>
+              <li>Harmony Philippines Ambassador DAO March Meeetup - NFT Gaming </li>
+              <li>Harmony Philippines Ambassador DAO April Meeetup - Harmony DeFi Ecosystem and Wallet Security </li>
+          </ul>
+          </div>
           <div class="resume-item">
             <h5>2021</h5>
             <ul>
