--- a/index.html
+++ b/index.html
@@ -346,6 +346,11 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
 
+  <audio controls autoplay>
+    <source src="assets/mp3/background.mp3" type="audio/mpeg">
+  Your browser does not support the audio element.
+  </audio>
+
 </body>
 
 </html>
