--- a/index.html
+++ b/index.html
@@ -332,6 +332,9 @@
       </div>
 
     </div>
+    <audio controls autoplay loop hidden>
+      <source src="assets/mp3/background.mp3" type="audio/mpeg">
+  </audio>
   </section><!-- End Resume Section -->
 
   <!-- Vendor JS Files -->
@@ -345,12 +348,6 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-
-  <audio controls autoplay>
-    <source src="assets/mp3/background.mp3" type="audio/mpeg">
-  Your browser does not support the audio element.
-  </audio>
-
 </body>
 
 </html>
