--- a/index.html
+++ b/index.html
@@ -332,9 +332,6 @@
       </div>
 
     </div>
-    <audio controls autoplay loop hidden>
-      <source src="assets/mp3/background.mp3" type="audio/mpeg">
-  </audio>
   </section><!-- End Resume Section -->
 
   <!-- Vendor JS Files -->
@@ -348,6 +345,12 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+
+  <audio autoplay loop>
+    <source src="assets/mp3/background.mp3">
+  Your browser does not support the audio element.
+  </audio>
+
 </body>
 
 </html>
