--- a/index.html
+++ b/index.html
@@ -345,8 +345,8 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
-  <iframe src="silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
-  <audio id="player" autoplay loop>
+  <iframe src="assets/mp3/silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
+  <audio id="player" autoplay loop controls>
     <source src="assets/mp3/background.mp3" type="audio/mp3">
 </audio>
 </body>
