--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <iframe src="assets/mp3/silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
-  <audio id="player" autoplay loop controls>
+  <audio id="player" autoplay loop hidden>
     <source src="assets/mp3/background.mp3" type="audio/mp3">
 </audio>
 </body>
