--- a/index.html
+++ b/index.html
@@ -266,6 +266,9 @@
               <li>Harmony Philippines Ambassador DAO February Meeetup - Harmony and Its Ecosystem</li>
               <li>Harmony Philippines Ambassador DAO March Meeetup - NFT Gaming </li>
               <li>Harmony Philippines Ambassador DAO April Meeetup - Harmony DeFi Ecosystem and Wallet Security </li>
+              <li>Meet-A-Verse 2.0 - Harmony Ecosystem and Wallet Security </li>
+              <li>Arm Forces of the Philippines Cyber Summit - A deep look at Social Engineering </li>
+              <li>AFP Signal Regiment : CSIRT Training - Cyber Threat Intelligence and Disaster Recovery </li>
           </ul>
           </div>
           <div class="resume-item">
