--- a/index.html
+++ b/index.html
@@ -141,6 +141,14 @@
             <p></p>
           </div>
         </div>
+        
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-md-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-file"></i></div>
+            <h5><a href="">Cyber Threat Intelligence Analyst</a></h5>
+            <p></p>
+          </div>
+        </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
