--- a/index.html
+++ b/index.html
@@ -356,10 +356,11 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+   <!-- Sound
   <iframe src="assets/mp3/silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
   <audio id="player" autoplay loop hidden>
     <source src="assets/mp3/background.mp3" type="audio/mp3">
-</audio>
+  </audio> -->
 </body>
 
 </html>
