--- a/index.html
+++ b/index.html
@@ -45,6 +45,7 @@
           <li><a class="nav-link active" href="#header">Home</a></li>
           <li><a class="nav-link" href="#about">About</a></li>
           <li><a class="nav-link" href="#talks">Talks</a></li>
+          <li><a class="nav-link" href="https://osif.laet4x.com/" target="_">OSIF Project</a></li>
           <li><a class="nav-link" href="https://ctf.laet4x.com/">CTF</a></li>
           <li><a class="nav-link" href="http://laet4x.medium.com" target="_">Blog</a></li>
         </ul>
