--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
           <h3>WHOAMI</h3>
           <p class="fst-italic">
-            laet4x is a Cyber Security Professional working as Lead Information Security Specialist for an IT company based in US. His passion in Cyber Security extends in different organizations he co-founded like Project-AG, PEHCON and KALASAG where he do talks, and seminars for free. flag{W@yB4cKMach1ne}
+            laet4x is a Cyber Security Professional working as Lead Information Security Specialist for an IT company based in US. His passion in Cyber Security extends in different organizations he co-founded like Project-AG, PEHCON and KALASAG where he do talks, and seminars for free.
           </p>
           <div class="row">
             <div class="col-lg-6">
