--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       <h1><a href="index.html">laet4x</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="mr-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a> -->
-      <h2>Are you a one or a zero?</h2>
+      <h2>Are you a one or a zero?flag{W@yB4cKMach1ne}</h2>
 
       <nav id="navbar" class="navbar">
         <ul>
