--- a/index.html
+++ b/index.html
@@ -269,6 +269,13 @@
       <div class="row">
         <div class="col-lg-6">
           <h3 class="resume-title"></h3>
+          <div class="resume-item">
+            <h5>2023</h5>
+            <ul>
+              <li>ZyberPH From Code to Security : Developing Secure Programming Practices </li>
+              <li>Technological University of the Philippines : Cybersecurity in 21st Century </li>
+          </ul>
+          </div>
            <div class="resume-item">
             <h5>2022</h5>
             <ul>
