--- a/index.html
+++ b/index.html
@@ -339,13 +339,18 @@
           <div class="resume-item">   
             <h5>2016</h5>
             <ul>
+              <li>Panay Island Cyber Security Summit - Free WIFI </li>
+              <li>Regional Computer Engineering Convention 1.0 - Web App Security | OWASP Top 10 2013</li>
+              <li>Philippine Army's 3ID - Cyber Security Seminar with PICSPro Panay </li>
               <li>TCON 3 -  Wireless Hacking, Android Hacking</li>
+              <li>PICSPro Panay Campus Tour at Western Institute of Technology - Web App Security | OWASP Top 10 2013 </li>
            </ul>
           </div>
           <div class="resume-item">   
             <h5>2015</h5>
             <ul>
               <li>Filamer Christian University -  Web App Security | OWASP Top 10 2013</li>
+              <li>The Gathering: Panay Island Cyber Security Summit -  Web App Security | OWASP Top 10 2013 </li>
            </ul>
           </div>
       </div>
