--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@
               <li>Philippine Army's 3ID - Cyber Security Seminar with PICSPro Panay </li>
               <li>TCON 3 -  Wireless Hacking, Android Hacking</li>
               <li>PICSPro Panay Campus Tour at Western Institute of Technology - Web App Security | OWASP Top 10 2013 </li>
+              <li>Colegio De la Purisma Concepcion - Web Application Security </li>
            </ul>
           </div>
           <div class="resume-item">   
