--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
-            <h5><a href="">EC-Council Information Security Manager</a></h5>
+            <h5><a href="">Associate Certified Chief Information Security Officer</a></h5>
             <p></p>
           </div>
         </div>
@@ -158,11 +158,19 @@
             <p></p>
           </div>
         </div>
+        
+        <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
+          <div class="icon-box">
+            <div class="icon"><i class="bx bx-file"></i></div>
+            <h5><a href="">Computer Hacking Forensics Investigator</a></h5>
+            <p></p>
+          </div>
+        </div>
 
         <div class="col-lg-4 col-md-6 d-flex align-items-stretch mt-4 mt-lg-0">
           <div class="icon-box">
             <div class="icon"><i class="bx bx-file"></i></div>
-            <h5><a href="">Certified Blockchain Developer</a></h5>
+            <h5><a href="">Certified in Cyber Security</a></h5>
             <p></p>
           </div>
         </div>
