--- a/index.html
+++ b/index.html
@@ -378,10 +378,10 @@
 
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
+  <p style="color:black;">tcon{2a688a0f4bc9aac948361c3356e716ab}</p>
    <!-- Sound
   <iframe src="assets/mp3/silence.mp3" allow="autoplay" id="audio" style="display: none"></iframe>
   <audio id="player" autoplay loop hidden>
-  tcon5 flag here - tcon{2a688a0f4bc9aac948361c3356e716ab}
     <source src="assets/mp3/background.mp3" type="audio/mp3">
   </audio> -->
 </body>
